--- a/src/templates/components/nav.pug
+++ b/src/templates/components/nav.pug
@@ -35,7 +35,7 @@
 #sidebar(uk-offcanvas="overlay: true")
     .uk-offcanvas-bar
 
-        a.uk-navbar-item.uk-logo.uk-margin-medium-top.uk-margin-large-bottom(href=""): img(src="/assets/images/logo.svg", alt="")
+        a.uk-navbar-item(href=""): img.uk-logo.uk-margin-medium-top.uk-margin-large-bottom(src="/assets/images/logo.svg", alt="")
 
         button.uk-offcanvas-close(type="button", uk-close)
 
