style: logo definition

--- a/src/templates/section/hero.pug
+++ b/src/templates/section/hero.pug
@@ -6,13 +6,13 @@ section#hero
         )
 
         #logo-full.uk-overlay.uk-overlay-primary.uk-grid.uk-position-top-left
-            img(src='/assets/images/logo-full.svg')
+            img.uk-logo(src='/assets/images/logo-full.svg')
 
         #banner-call.uk-overlay.uk-overlay-default.uk-position-bottom.uk-grid
-            div(class="uk-width-1-2@s")
+            div(class='uk-width-1-2@s')
                 h2 Make it home tonight...
 
-            div(class="uk-width-1-2@s")
+            div(class='uk-width-1-2@s')
                 button.uk-button.uk-button-primary.uk-border-rounded.uk-text-large(
                     href='tel:1-478-994-8554'
                 ) Call Now!
