fix: set transform origin on element, not in js

--- a/src/templates/section/hero.pug
+++ b/src/templates/section/hero.pug
@@ -5,7 +5,7 @@ section#hero
             data-uk-cover
         )
 
-        #logo-full.uk-overlay.uk-overlay-primary.uk-grid.uk-position-top-left
+        #logo-full.uk-overlay.uk-overlay-primary.uk-grid.uk-position-top-left.uk-transform-origin-top-left
             img.uk-logo(src='/assets/images/logo-full.svg')
 
         #banner-call.uk-overlay.uk-overlay-default.uk-position-bottom.uk-grid
