add link to Charlie Pride cover of Six Days

--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -3,7 +3,9 @@ footer.uk-padding-small
         Inspired by the song "Six Days On The Road".
         Originally performed by
         #[a.uk-text-warning(href='https://www.youtube.com/watch?v=CJYH8ugKw-E') Dave Dudley],
-        with an excellent cover by
+        with excellent covers by
+        #[a.uk-text-warning(href='https://www.youtube.com/watch?v=LiQX6FHGs7w') Charlie Pride]
+        and
         #[a.uk-text-warning(href='https://www.youtube.com/watch?v=9zrcVFnj5Vc') Sawyer Brown].
         
     p.copyright.uk-text-small.uk-text-center.uk-padding-remove-bottom.
