proto: services section

--- a/src/templates/section/services.pug
+++ b/src/templates/section/services.pug
@@ -1,2 +1,130 @@
-section#services.uk-section
-    h1#services--header.uk-heading-bullet Services
+section#services.uk-section.uk-container.uk-margin-large-top
+    h1#services--header.uk-heading-bullet.uk-margin-remove-bottom Services
+    p.uk-text-meta.uk-margin-remove Well the ICC is a checkin' on down the line...
+    p.uk-text-meta.uk-margin-remove-top ...Well, my rig's a little old but that don't mean she's slow
+    .uk-grid-medium.uk-grid-match(uk-grid, class='uk-child-width-1-2@s uk-child-width-1-3@m')
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Air System
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Air Compressor
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Air Dryer
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Air Governor
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Air Lines & Hoses
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Gladhands
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Valves
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Axle, Suspension & Steering
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Airbags
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Axle
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Leveling Valve
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Power Steering Hoses
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Springs
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Brake System
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Adjustment
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Air Lines
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Brake Chamber (Maxi, Pancake)
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Brakes
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Valves
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Cooling System
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Fan Clutch
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Hoses & Fittings
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Sensors
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Water Pump
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Driveline
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Clutch Adjustment
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Clutch Pedal Linkage
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Driveshaft
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Transmission Shifter Linkage
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Electrical System
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Alternator
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Batteries
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Computer Diagnostic
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Lights
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Sensors
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Starter
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Wiring & Fuses
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Engine
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Belt Tensioner & Pulleys
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Belts
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Diesel Exhaust Fluid (DEF)
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Emissions/EGR/DPF/Regeneration
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Filters
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Turbo Hoses & Clamps
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Fuel System
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Filters
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Fuel Delivery
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Fuel Prime
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Fuel Injector Lines
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Water Pump
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Trailer Systems
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') 5th Wheel
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Electrical 7-Way/Pigtail Wiring, Boxes, Lights
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Landing Gear Legs (Dolly Legs)
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Liftgate/Hydraulic Ramps
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Reefer Engine
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Rollup & Swing Doors
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Roof Leak
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Tandems
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title Wheels & Tires
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Bearings
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Mud Flaps & Brackets
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Tires
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Wheel Seals
+
+        div
+            .uk-card.uk-card-default(uk-parallax='opacity: 0,1; y: 80,0; viewport: 0.3')
+                .uk-card-header
+                    h3.uk-card-title And More...
+                .uk-card-body
+                    ul.uk-list
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') DOT/Federal Inspections
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Lockouts
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Welding (Select Areas)
+                        li(uk-parallax='opacity: 0,1; x: 80,0; viewport: 0.3') Hamburger & Bottle Water
