--- a/src/style/4-layout/_sections.scss
+++ b/src/style/4-layout/_sections.scss
@@ -22,6 +22,18 @@
     h1 {
         margin-top: -1.5em;
     }
+
+    .uk-card-default .uk-card-header {
+        background-color: #006747;
+        border: 2px solid #006747;
+        border-radius: 2px;
+        box-shadow: inset 0 0 0 2px #fff;
+        color: #fff;
+    }
+
+    .uk-card-default .uk-card-title {
+        color: #fff;
+    }
 }
 
 #contact {
