add blockquote style

--- a/src/style/2-base/_base.scss
+++ b/src/style/2-base/_base.scss
@@ -9,10 +9,27 @@ html {
 }
 
 body {
+    letter-spacing: 0.05rem;
     min-height: 100vh;
 }
 
 header,
 footer {
     background-color: $color-dark-background;
+}
+
+blockquote {
+    margin: 0.5em;
+    padding: 0.5em 2em 0.5em 3em;
+    position: relative;
+}
+
+blockquote::before {
+    content: '\201C';
+    font-family: serif;
+    font-size: 3em;
+    left: 0;
+    line-height: 1;
+    position: absolute;
+    top: 0;
 }
