fix: use curly quotes

--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -1,6 +1,6 @@
 footer.uk-padding-small
     p.uk-text-small.uk-text-center.
-        Inspired by the song "Six Days On The Road".
+        Inspired by the song &ldquo;Six Days On The Road&rdquo;.#[br]
         Originally performed by
         #[a.uk-text-warning(href='https://www.youtube.com/watch?v=CJYH8ugKw-E') Dave Dudley],
         with excellent covers by
