--- a/src/templates/section/services.pug
+++ b/src/templates/section/services.pug
@@ -1,7 +1,8 @@
 section#services.uk-section.uk-container.uk-margin-large-top
     h1#services--header.uk-heading-bullet.uk-margin-remove-bottom Services
-    p.uk-text-meta.uk-margin-remove Well the ICC is a checkin' on down the line...
-    p.uk-text-meta.uk-margin-remove-top ...Well, my rig's a little old but that don't mean she's slow
+        blockquote.uk-text-muted.uk-margin-remove.
+            Well the ICC is a checkin' on down the line...</br>
+            ..Well, my rig's a little old but that don't mean she's slow
 
     .uk-grid-medium.uk-grid-match(uk-grid, class='uk-child-width-1-2@s uk-child-width-1-3@m')
         each services, title in data.services
