fix: blockquote for lyrics, prefer white bkgrnd

--- a/src/style/4-layout/_sections.scss
+++ b/src/style/4-layout/_sections.scss
@@ -37,13 +37,14 @@
 }
 
 #contact {
-    .uk-logo {
-        background-color: darken($color-dot-orange, 30%);
-        border-radius: 500px;
-        padding: 5% 20%;
+    blockquote {
+        br:nth-of-type(odd) {
+            @media (min-width: $breakpoint-medium) {
+                display: none;
+            }
+        }
     }
     .uk-button-primary {
-        border: $global-border-width solid $global-secondary-background;
         padding: 0.5em 1.5em;
     }
 }
