--- a/src/templates/section/contact.pug
+++ b/src/templates/section/contact.pug
@@ -1,9 +1,12 @@
-section#contact.uk-section.uk-section-default.uk-section-xsmall.uk-background-primary
-    .uk-container.uk-align-center
-        p.uk-text-secondary.uk-text-center.uk-margin-remove.
-            Oh well my hometown's a comin' in sight if you think I'm a happy you're right </br>
-            Six days on the road I said I'm a gonna make it home tonight
-            
+section#contact.uk-section.uk-section-default.uk-section-xsmall
+    .uk-container
+        .uk-container.uk-flex.uk-flex-center
+            blockquote.uk-text-secondary.uk-margin-remove.uk-inline.
+                Oh well, my hometown's a comin' in sight.#[br]
+                If you think I'm a happy you're right.#[br]
+                Six days on the road, I said,#[br]
+                #[strong I'm a gonna make it home tonight.]
+                
         img.uk-logo.uk-align-center(src='/assets/images/logo-full.svg')
 
         h2.uk-text-center Central Dispatch for Georgia
@@ -12,7 +15,7 @@ section#contact.uk-section.uk-section-default.uk-section-xsmall.uk-background-pr
             a#phone.c2a.uk-button.uk-button-primary.uk-border-pill.uk-text-large(
                 href='tel:1-478-994-8554'
             )
-                span(class='uk-visible@l') Call Now: &nbsp;
+                span(class='uk-visible@s') Call Now: &nbsp;
                 span.uk-text-danger.uk-text-bold 478-994-8554
 
         h1.uk-title.uk-text-center 8 Days A Week, 30 Hours A Day
