--- a/src/templates/section/locations.pug
+++ b/src/templates/section/locations.pug
@@ -1,4 +1,11 @@
 section#locations.uk-section.uk-background-secondary
     .slant-left
-    h1#locations--header.uk-heading-bullet.uk-light Locations
-    #map
+    .uk-container
+        h1#locations--header.uk-heading-bullet.uk-light Service Areas
+
+        div(uk-grid)
+            div(class='uk-width-2-3@m')
+                #map
+            div(class='uk-width-1-3@m')
+                h3.uk-text-warning North & Central Georgia
+                p.uk-light Mobile units provide on-site and roadside service 24 hours a day to the Metro Atlanta area and all of Middle Georgia, around Macon, from McDonough to Dublin, and from Milledgeville to Perry.
