feat: add social icons

--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -1,12 +1,22 @@
 footer.uk-padding-small
-    p.uk-text-small.uk-text-center.
-        Inspired by the song &ldquo;Six Days On The Road&rdquo;.#[br]
-        Originally performed by
-        #[a.uk-text-warning(href='https://www.youtube.com/watch?v=CJYH8ugKw-E') Dave Dudley],
-        with excellent covers by
-        #[a.uk-text-warning(href='https://www.youtube.com/watch?v=LiQX6FHGs7w') Charlie Pride]
-        and
-        #[a.uk-text-warning(href='https://www.youtube.com/watch?v=9zrcVFnj5Vc') Sawyer Brown].
-        
-    p.copyright.uk-text-small.uk-text-center.uk-padding-remove-bottom.
-        &copy; 2019 A Anytime Anywhere 24 Hour Truck Repair of Georgia, LLC.
+    div(uk-grid)
+        .uk-width-1-5.uk-flex.uk-flex-center.uk-flex-middle
+            a(href='mailto:operations@anytime24hour.com')
+                img.social-icon(src='assets/icons/mail-round.png')
+            a(
+                href='https://www.facebook.com/A-Anytime-Anywhere-24-Hour-Truck-Repair-Tire-Service-LLC-421064694644217/'
+            )
+                img.social-icon(src='assets/icons/f_logo_RGB-InvGrey_58.png')
+        .uk-width-3-5
+            p.uk-text-small.uk-text-center.
+                Inspired by the song &ldquo;Six Days On The Road&rdquo;.#[br]
+                Originally performed by
+                #[a.uk-text-warning(href='https://www.youtube.com/watch?v=CJYH8ugKw-E') Dave Dudley],
+                with excellent covers by
+                #[a.uk-text-warning(href='https://www.youtube.com/watch?v=LiQX6FHGs7w') Charlie Pride]
+                and
+                #[a.uk-text-warning(href='https://www.youtube.com/watch?v=9zrcVFnj5Vc') Sawyer Brown].
+                
+            p.copyright.uk-text-small.uk-text-center.uk-padding-remove-bottom.
+                &copy; 2019 A Anytime Anywhere 24 Hour Truck Repair of Georgia, LLC.
+        .uk-width-1-5
