Replace placeholders with stock photos

--- a/src/templates/section/hero.pug
+++ b/src/templates/section/hero.pug
@@ -1,9 +1,6 @@
 section#hero
     .uk-cover-container.uk-height-viewport(data-uk-height-viewport)
-        img.uk-overflow-hidden(
-            src='assets/images/placeholder/stock-photo-bright-red-classic-big-rig-semi-truck-with-high-exhaust-pipes-and-chrome-accessories-transporting-1031431486.jpg',
-            data-uk-cover
-        )
+        img.uk-overflow-hidden(src='assets/images/red-big-rigx1600_1031431486.jpg', data-uk-cover)
 
         #logo-full.uk-overlay.uk-overlay-primary.uk-grid.uk-position-top-left.uk-transform-origin-top-left
             img.uk-logo(src='/assets/images/logo-full.svg')
