--- a/src/templates/section/services.pug
+++ b/src/templates/section/services.pug
@@ -1,11 +1,10 @@
 section#services.uk-section
-    div.img(class='uk-visible@m')
+    #services--background(class='uk-visible@m')
     .uk-container
         h1#services--header.uk-heading-bullet.uk-margin-remove-bottom Services
             blockquote.uk-text-muted.uk-margin-remove.
                 Well the ICC is a checkin' on down the line...</br>
-                ..Well, my rig's a little old but that don't mean she's slow
-
+                
         .uk-grid-medium.uk-grid-match(uk-grid, class='uk-child-width-1-2@s uk-child-width-1-3@m')
             each services, title in data.services
                 div
