--- a/src/style/4-layout/_sections.scss
+++ b/src/style/4-layout/_sections.scss
@@ -31,20 +31,6 @@
 #services {
     position: relative;
 
-    > div.img {
-        background-attachment: fixed;
-        background-image: url('../assets/images/placeholder/stock-photo-close-up-of-the-mechanics-of-a-large-diesel-engine-1295397085.jpg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 200%; // TODO: Change this when get final fullsize image.
-        height: calc(100% + 200px);
-        left: 0;
-        opacity: 0.2;
-        position: absolute;
-        top: -100px;
-        width: 100vw;
-        z-index: -999;
-    }
     h1 {
         margin-top: -1.5em;
     }
@@ -60,6 +46,20 @@
     .uk-card-default .uk-card-title {
         color: #fff;
     }
+}
+
+#services--background {
+    background-attachment: fixed;
+    background-image: url('../assets/images/diesel-engine_1295397085.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    height: calc(100% + 200px);
+    left: 0;
+    opacity: 0.2;
+    position: absolute;
+    top: -100px;
+    width: 100vw;
+    z-index: -999;
 }
 
 #contact {
