Add link to top of page from footer

--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -19,4 +19,5 @@ footer.uk-padding-small
                 
             p.copyright.uk-text-small.uk-text-center.uk-padding-remove-bottom.
                 &copy; 2019 A Anytime Anywhere 24 Hour Truck Repair of Georgia, LLC.
-        .uk-width-1-5
+        .uk-width-1-5.uk-flex.uk-flex-center.uk-flex-middle
+            a(href='', uk-totop, uk-scroll).uk-text-primary
