--- a/src/templates/section/locations.pug
+++ b/src/templates/section/locations.pug
@@ -9,3 +9,13 @@ section#locations.uk-section.uk-background-secondary
             div(class='uk-width-1-3@m')
                 h3.uk-text-warning North & Central Georgia
                 p.uk-light Mobile units provide on-site and roadside service 24 hours a day to the Metro Atlanta area and all of Middle Georgia, around Macon, from McDonough to Dublin, and from Milledgeville to Perry.
+                form#locateMe
+                    .uk-margin-small.uk-width-1-1.uk-inline
+                        a#use-location.uk-form-icon.uk-form-icon-flip(
+                            href='#',
+                            uk-icon='icon: location',
+                            uk-tooltip='Use current location'
+                        )
+                        input.uk-input(type='text', placeholder='Your address')
+                    .uk-margin-small
+                        button#whereAmI(href='#').uk-button.uk-button-default.uk-light Where am I?
