--- a/src/templates/section/about.pug
+++ b/src/templates/section/about.pug
@@ -1,4 +1,40 @@
-.uk-container.uk-container-medium.uk-container-center
-section#about.uk-section.uk-padding-remove.uk-background-secondary
-    h1#about--header.uk-heading-bullet.uk-light About
-    .slant-right
+section#about.uk-section.uk-background-secondary
+    .uk-container.uk-container-medium
+        h1#about--header.uk-heading-bullet.uk-light About
+
+        p.uk-light A Anytime Anywhere 24 Hour Mobile Truck Repair of Georgia, LLC was started in 1981 in Macon, Georgia. The company is family-owned and operated by Richard E. Holden, Retired United States Army Reserve Major with decorations.
+
+        p.uk-light We service the metro Atlanta and Middle Georgia areas since 1981, offering a fully mobile, 24/7 service for repairs and inspections on commercial, medium and heavy-duty trucks and trailers. Our goal is to be timely, efficient, reliable, and professional, valuing the trucking industry as essential to the survival and welfare of our country.
+
+        p.uk-light We like to say that we are available “8 days a week, 30 hours a day”, anytime, anywhere we are needed!
+
+        a.uk-button.uk-button-default.uk-light(href='#modal-container', uk-toggle) More...
+
+        #modal-container.uk-modal-container(uk-modal)
+            .uk-modal-dialog.uk-modal-body
+                button.uk-modal-close-default(type='button', uk-close)
+
+                .uk-modal-header
+                    h2.uk-modal-title About
+
+                .uk-modal-body(uk-overflow-auto)
+                    h3 THE OWNER:
+
+                    p Dick Holden is the owner and founder of A Anytime Anywhere 24 Hour Mobile Truck Repair of Georgia, LLC and has worked on autos and tractor-trailers since he was 15 years old. He graduated from Lanier Senior High School in Macon, Georgia in 1962. He accumulated over two years of college credits while serving in the US Army. Mr. Holden enlisted in the U.S. Army in 1965. He enrolled in Officer Candidate School and was commissioned as a 2nd Lieutenant, Infantry in 1966 where he continued to serve on active duty for ten years and in the Kentucky National Guard and US Army Reserves for an additional six years. He was honorably discharged as a Major, USAR, having survived two successive years, March of 1967 to early 1969 being wounded during the 1969 TET offensive in Vietnam. While in Vietnam, Mr. Holden was awarded two Silver Stars, Bronze Stars for Valor and Meritorious Service, Air Medal, Purple Heart, and Vietnamese Cross of Gallantry with Palm for combat actions. Mr. Holden served as a Recon Platoon Leader, then Mobile Advisory Team Leader, and finally as an Infantry Company Commander with the 1st Infantry Division. Upon being returned to the States for recovery from wounds, he attended and was rated as a helicopter pilot at schools in both Texas and Alabama. After attending the Infantry Officers Advanced Course at Ft Benning, Georgia, he continued to Fort Knox, Kentucky where he served as an Instructor at the Armor School until he was released from Active Duty following the end of the Vietnam War and the resulting military Reduction In Force. He then joined the Kentucky National Guard and served as the Commanding Officer of the 307th Heavy Equipment Maintenance Company until moving back to Georgia.
+
+                    p Mr. Holden is a family man and currently resides in Forsyth, Georgia with his wife, Patsy to whom he has been happily married for 38 years.
+
+                    h3 THE COMPANY:
+
+                    p A Anytime Anywhere 24 Hour Mobile Truck Repair of Georgia, LLC is family-owned and operated with both Mr. Holden’s sons, his son-in-law and his grandson involved as mechanics, his daughter, Julie Presley, serves as CFO and accountant and his wife, Mrs. Holden serves as administrative support and has played an integral role in the growth and success of the company, which was started January 1, 1981, in Macon, Georgia.
+
+                    p After two years of getting the company operating efficiently in their accounting, Mr. Holden encouraged Julie to start her own accounting firm, 1st Choice Accounting & Tax, LLC, in Forsyth, Georgia. It has been a great success.
+
+                    p One of his sons, John Pape, has gone on to start his own fleet service company, Quick Fix Services Southwest of Atlanta, GA and is doing very well.
+
+                    p His other son, Benny Heinzelmann, has been with Mr. Holden from his senior year, 38 years ago, in high school and has become a Premier troubleshooter and mechanic.
+                    p His grandson, Josh Presley, has been working with the company about 8 months and is developing into a very good mechanic and troubleshooter
+
+                    p A Anytime Anywhere 24 Hour Mobile Truck Repair of Georgia, LLC has been servicing the metro Atlanta and Middle Georgia areas since 1981, offering a fully mobile, 24/7 service for repairs and inspections on commercial trucks and trailers. The company strives to be timely, efficient, reliable, and professional, valuing the trucking industry as extremely essential to the survival of our country. We like to say that we are available “8 days a week, 30 hours a day”, anytime, anywhere we are needed!
+
+        .slant-right
